@@ -141,9 +141,6 @@ axiom_target_datadir = $(axiom_targetdir)/share
 axiom_target_texdir = $(axiom_target_datadir)/texmf/tex
 
 
-## Where Axiom keeps the tarballs for optional components
-axiom_optional_srcdir = $(abs_top_srcdir)/zips
-
 AXIOM_X11_CFLAGS = @X_CFLAGS@ 
 AXIOM_X11_LDFLAGS = @X_LIBS@ @X_PRE_LIBS@ -lX11 @X_EXTRA_LIBS@
 
