@@ -1,3 +1,10 @@
+2009-10-21  Ralf Hemmecke  <ralf@hemmecke.de>
+
+	* configure.ac, Makefile.in, config/var-def.mk:
+	Enable --with-noweb=/path/to/noweb-2.10a.tgz.
+	Disable --with-included-noweb.
+	Remove axiom_optional_srcdir.
+
 2009-10-20  Ralf Hemmecke  <ralf@hemmecke.de>
 
 	* src/aldor/Makefile2.in: Remove useless trace commands.
